# Procedural-Universe

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Notes.txt  README.md  controls.txt
assets/: Courier.font  SegoeUI.font  Ship.mtl  Sphere.mtl  TestSkybox.dds
resources/: Resource.rc
shaders/: Atmosphere.psh  Atmosphere.vsh  Common.hlsl  Depth.psh  DrawParticle.gsh  GalaxyParticle.gsh  Gravity.csh  PassThruGS.vsh  PlainColour.psh  Planet.psh  Planet.vsh  PlanetParticle.gsh  Position.vsh  PositionTexture.vsh  SandboxParticle.gsh  SandboxParticleLerp.gsh  Skybox.psh  Skybox.vsh  Splat.gsh  Splat.psh  Test.csh  Texture.psh  Tint.psh  Update.csh  Volumetric.hlsl
shaders/Misc/: Billboard.gsh  Billboard.psh  Billboard.vsh  Skybox.vsh  Splat.gsh  Splat.psh
shaders/Particles/: DrawParticle.gsh  GalaxyParticle.gsh  Planet.vsh  PlanetParticle.gsh  PlanetWater.psh  SandboxParticle.gsh  SandboxParticleLerp.gsh  Star.psh  StarParticle.psh
shaders/Planet/: Planet.psh  Planet.vsh  PlanetFromAtmosphere.psh  PlanetFromAtmosphere.vsh  PlanetFromSpace.psh  PlanetFromSpace.vsh  PlanetWater.psh  PlanetWaterFromAtmosphere.psh  PlanetWaterFromSpace.psh  Ring.psh
shaders/Standard/: Position.vsh  PositionNormalTexture.vsh  PositionTexture.vsh
shaders/Volumetric/: Atmosphere.vsh  Scatter.hlsl  SkyFromAtmosphere.psh  SkyFromAtmosphere.vsh  SkyFromSpace.psh  SkyFromSpace.vsh  Volumetric.hlsl
src/: NBody.cpp
src/App/: App.cpp  App.hpp  AppCore.hpp  Core.hpp  DeviceResources.cpp  DeviceResources.hpp  NBody.cpp  StepTimer.hpp
src/Core/: Common.hpp  Event.cpp  Event.hpp  Events.hpp  Except.hpp  Math.hpp  Maths.cpp  Maths.hpp  Pins.hpp  State.hpp  ThreadPool.hpp  Timer.hpp  Vec3.hpp
src/Misc/: Gradient.cpp  Gradient.hpp  ProcUtils.cpp  ProcUtils.hpp  Shapes.hpp
src/Render/: ArcballCamera.cpp  ArcballCamera.hpp  Camera.cpp  Camera.hpp  ConstantBuffer.hpp  Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Particle.hpp  PostProcess.cpp  PostProcess.hpp  RenderCommon.cpp  RenderCommon.hpp  Shader.cpp  Shader.hpp  Ship.cpp  Ship.hpp  ShipCamera.cpp  ShipCamera.hpp  Skybox.cpp  Skybox.hpp  SkyboxGenerator.cpp  SkyboxGenerator.hpp  Splatting.cpp  Splatting.hpp
src/Render/Cameras/: ArcballCamera.cpp  ArcballCamera.hpp  Camera.hpp  SandboxCamera.cpp  SandboxCamera.hpp  ShipCamera.cpp  ShipCamera.hpp
src/Render/DX/: RenderCommon.cpp  RenderCommon.hpp  Shader.cpp
src/Render/Misc/: Billboard.cpp  Billboard.hpp  Particle.hpp  PostProcess.cpp  PostProcess.hpp  SkyboxGenerator.cpp  SkyboxGenerator.hpp  Splatting.cpp  Splatting.hpp
src/Render/Model/: Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Ship.hpp  Skybox.cpp  Skybox.hpp
src/Render/Planet/: Planet.cpp  Planet.hpp  Quadtree.hpp  TerrainNode.cpp  TerrainNode.hpp
src/Render/Universe/: Galaxy.cpp  Galaxy.hpp
src/Services/: Log.cpp  Log.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Sim/: BarnesHut.cpp  BarnesHut.hpp  BruteForce.cpp  BruteForce.hpp  BruteForceCPU.cpp  BruteForceCPU.hpp  BruteForceGPU.cpp  BruteForceGPU.hpp  GalaxySeeder.cpp  GalaxySeeder.hpp  INBodySim.cpp  INBodySim.hpp  IParticleSeeder.cpp  IParticleSeeder.hpp  Octree.cpp  Octree.hpp  Physics.hpp  RandomSeeder.cpp  RandomSeeder.hpp  StarSystemSeeder.cpp  StarSystemSeeder.hpp
src/States/: SandboxState.cpp  SandboxState.hpp  SimulationState.cpp  SimulationState.hpp
src/States/DebugSandbox/: DebugSandboxState.cpp  DebugSandboxState.hpp
src/States/Sandbox/: GalaxyTarget.cpp  (+11 more)
src/UI/: ImGuiDx11.cpp  ImGuiWin32.cpp  ImGuiWin32.h  UI.cpp  UI.hpp
test/: LogTests.cpp  MathsTests.cpp
(+15 files in other folders)
